# VBH

./: README.md
RP2040-v6-HAT-C/examples/loopback/: CMakeLists.txt  UART_Communication.c  UART_Communication.h  spi_master.c  tcp_api.c  tcp_api.h  tcp_server.c  tcp_server.h  testFIle.c  w6x00_loopback.c
RP2040-v6-HAT-C/libraries/: CMakeLists.txt
RP2040/RP2040-v6-HAT-C/: CMakeCache.txt  Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/examples/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/examples/AddressAutoConfiguration/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/examples/loopback/: CMakeLists.txt  Makefile  UART_Communication.c  UART_Communication.h  cmake_install.cmake  tcp_server.c  testFIle.c  w6x00_loopback.c
RP2040/RP2040-v6-HAT-C/examples/loopback/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
RP2040/RP2040-v6-HAT-C/libraries/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/docs/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/src/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/src/common/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/pico-sdk/tools/: Makefile  cmake_install.cmake
RP2040/RP2040-v6-HAT-C/port/: Makefile  cmake_install.cmake
(+131 files in other folders)
